# lora_training_platform

./: .gitignore  README.md  start.sh
.trae/documents/: dataset_image_quality_check.md  lora_平台架构方案.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/image_tools/: filter_single_person.py  select_lora_best.py  weibo_album_downloader.py  xhs_user_downloader.py
backend/app/routers/: datasets.py  images.py  jobs.py  models.py  prompts.py  remotes.py  system.py  voice.py
backend/app/services/: base_model_service.py  caption_manager.py  caption_service.py  config_builder.py  dataset_service.py  image_manager.py  image_quality.py  job_manager.py  prompt_service.py  ssh_service.py  voice_config.py  voice_dataset_service.py  voice_job_manager.py
backend/app/services/backends/: base.py  local_mps.py  registry.py  remote_ssh.py  resource.py
backend/app/services/voice_backends/: __init__.py  base.py  local_rvc.py  registry.py  remote_rvc.py
backend/app/utils/: log_parser.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: helpers.ts
frontend/src/components/PageHeader/: PageHeader.css  PageHeader.tsx
frontend/src/components/Select/: Select.css  Select.tsx
frontend/src/pages/Dashboard/: Dashboard.css  Dashboard.tsx
frontend/src/pages/DatasetDetail/: DatasetDetail.css  DatasetDetail.tsx
frontend/src/styles/: global.css
scripts/: setup_mac.sh
(+18 files in other folders)
