[project]
name = "lora-training-platform-backend"
version = "0.1.0"
description = "Backend for the LoRA training platform (FastAPI + kohya_ss orchestration)"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "pillow-heif>=0.16",
    "toml>=0.10",
    "psutil>=5.9",
    "paramiko>=3.4",
]

[tool.uv]
package = false
